# hipi

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: device-checklist.md  ec801e-one-shot.md  getting-started.md  hardware.md  troubleshooting.md  webhook.md
hipi/: __init__.py  __main__.py  cli.py  config.py  contacts.py  export.py  icon_paths.py  status_file.py  util.py  vcard.py  webhook.py
hipi/daemon/: at_serial.py  audio.py  forward.py  mmat_client.py  modem.py  pdu.py  rpc.py  rpc_client.py  server.py  sms.py  voice.py
hipi/db/: models.py
hipi/ui/: app.py  icon.py  main_window.py  notifications.py  rpc_client.py  status_page.py
hipi/ui/contacts/: page.py
hipi/ui/phone/: page.py
hipi/ui/setup/: wizard.py
hipi/ui/sms/: page.py
packaging/dbus/: hipi-modemmanager.conf
packaging/debian/: build-deb.sh
packaging/desktop/: hipi.desktop
packaging/gnome-shell-extension/: install.sh
packaging/polkit/: 50-hipi-modemmanager.rules  com.hipi.ModemManager.policy
packaging/scripts/: install-gnome-extension.sh
packaging/systemd/: hipi-daemon.service
packaging/udev/: 99-hipi-quectel.rules
scripts/: bind-ec801e-now.sh  device-verify.sh  filter-mm-ports.sh  hipi-setup.sh  install-orangepi.sh  install-system-policy.sh  modem-probe.sh  quectel-voice-setup.sh  quick-reinstall.sh  release-at-port.sh  run-hardware-tests.sh  run-tests.sh  setup-quectel-ec801e.sh  webhook-receiver.py
tests/: test_at_sms.py  test_audio.py  test_cli.py  test_contacts.py  test_contacts_helpers.py  test_daemon_handlers.py  test_db.py  test_export.py  test_forward.py  test_forward_integration.py  test_hardware.py  test_icon.py  test_modem.py  test_modem_recovery.py  test_notifications.py  test_packaging.py  test_pdu.py  test_rpc.py  test_sms.py  test_sms_import.py  test_status_file.py  test_util.py  test_vcard.py  test_voice.py  test_webhook.py
(+3 files in other folders)
