[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hipi"
version = "0.1.0"
description = "4G SMS and voice desktop app for Orange Pi with Quectel EC801E"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "HiPi Contributors" }]
dependencies = [
    "PySide6>=6.6",
    "smspdudecoder>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
hipi = "hipi.cli:main"
hipi-daemon = "hipi.daemon.server:main"

[tool.hatch.build.targets.wheel]
packages = ["hipi"]

[tool.hatch.build.targets.wheel.force-include]
"hipi/data/hipi.svg" = "hipi/data/hipi.svg"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
markers = [
    "hardware: requires real modem hardware",
]
asyncio_mode = "auto"
testpaths = ["tests"]
